# liten-fraktaler

./: .gitignore  CMakeLists.txt  README.md  ThreadPool.h  calc_and_color.hpp  fractals.hpp  main.cpp  misc_functions.hpp  structs.h
automation/: zoom.sh
code/: liten.cpp  liten.hpp  structs.hpp
code/fractal_def/: fractals.hpp  fractals.ipp  init_fractal.cpp
code/help/: help.cpp  help.hpp
code/math_reg_machine/: mrm.cpp  mrm.hpp  mrm.ipp
code/misc/: misc_functions.cpp  misc_functions.hpp  stopwatch.hpp  threadpool.hpp
code/parsing_loading/: load_fractal_script.cpp  load_palette.cpp  parse_options.cpp  parse_options.hpp
code/rendering/: block_renderer.ipp  block_renderers.ipp  coloring.cpp  coloring.hpp  render_defs.hpp  rendering.cpp
include/: structs.hpp  threadpool.hpp
include/fractal_def/: fractals.hpp  fractals.ipp  old_fractals.hpp
include/help/: help.cpp  help.hpp
include/misc/: misc_functions.cpp  misc_functions.hpp
include/parsing/: option_parsing.cpp  option_parsing.hpp
include/rendering/: coloring.cpp  coloring.hpp  old_rendering.hpp  rendering.cpp  rendering.hpp
notes/: notes.txt  problem_with_while_loop.cpp
old_code/: old_fractals.hpp  old_rendering.hpp
